# Aether

./: .gitignore  CAT_CONGRUENCE.md  CHANGELOG.md  COMPLIANCE.md  GOVERNANCE.md  LICENSE  NOTICE  README.md  SECURITY.md  install.ps1  install.sh  pyproject.toml  requirements-test.txt  run_webhook.py
.github/: dependabot.yml
.github/investment/: CAPITAL_ALLOCATION_TRACKER.md  KOTAHITANGA_INVESTMENT_STRATEGY.md  README.md
.github/workflows/: ci.yml  skills-ci.yml
aether/: __init__.py  cli.py  guardrails.py  init_cmd.py  llm.py  logging_config.py  memory.py  orchestrator.py  paths.py  threat_modeling.py
aether/bundled_skills/agent-reliability-context/: SKILL.md
aether/bundled_skills/build-ci-hygiene/: SKILL.md
aether/bundled_skills/cat-architectural-standards/: SKILL.md
aether/bundled_skills/design-system-unification/: SKILL.md
aether/computer/: __init__.py  agent.py  backend.py  tools.py
aether/skills/: __init__.py  loader.py
aether/tools/: __init__.py  base.py  cache.py  codebase_search.py  directory_lister.py  executor.py  file_reader.py  file_writer.py  memory_query.py  registry.py
aether/webhooks/: github_webhook.py
docs/: AETHER_SKILL_FORMAT.md  AETHER_VISION.md  ARCHITECTURE.md  CLI_REFERENCE.md  GETTING_STARTED.md  HARDENED_NZ_AI_SAFETY_GUIDELINES.md  PROBLEM_STATEMENT.md  RELEASE_COMMUNICATIONS_v0.6.0.md  ROADMAP.md  SKILLS.md  SKILLS_CATALOG.md  SKILL_DEVELOPMENT_GUIDE.md  USING_AETHER.md
examples/: error_remediation.py  project_scaffolding.py  security_hardening.py  usage_examples.py
scripts/: release_preflight.py  validate_skill.py
skills/: build-ci-hygiene.md  security-auth-guard.md
skills/aether-core/: SKILL.md
skills/aether-git-workflow/: SKILL.md
skills/aether-nz-ai-safety/: SKILL.md
skills/aether-skill-authoring/: SKILL.md
skills/aether-skills-ci/: SKILL.md
skills/build-ci-hygiene/: SKILL.md
skills/cat-architectural-standards/: SKILL.md
skills/cat-egress-sentinel/: SKILL.md
skills/cat-model-sentinel/: SKILL.md
skills/cat-trust-layer/: SKILL.md
skills/ci-failure-parser/: SKILL.md
skills/design-system-unification/: SKILL.md
skills/error-message-sanitization/: SKILL.md
skills/error-remediation-orchestrator/: SKILL.md
skills/git-workflow/: SKILL.md
skills/grants-agent/: SKILL.md
skills/notification-responder/: SKILL.md
skills/nz-startup/: README.md
skills/nz-startup-fleet-bridge/: SKILL.md
skills/release-engineering/: SKILL.md
skills/schema-migration-hygiene/: SKILL.md
skills/security-route-audit/: SKILL.md
skills/service-role-key-protection/: SKILL.md
skills/skill-creator/: SKILL.md
skills/strict-zod-schema-enforcement/: SKILL.md
skills/te-mana-raraunga-sovereignty/: SKILL.md
tests/: test_computer_use.py  test_release.py  test_smoke.py  test_validate_skill.py
tests/skills_ci/: test_validate_skill.py
(+45 files in other folders)
