[project]
name = "aether"
version = "0.6.0"
description = "Sovereign Agentic Development System - A culturally grounded, extensible AI development orchestrator"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Aether Project Contributors"}
]
dependencies = [
    "pyyaml>=6.0",
    "tenacity>=8.2.0",
]

[project.optional-dependencies]
webhook = [
    "fastapi>=0.110.0",
    "uvicorn[standard]>=0.29.0",
]
dev = [
    "pytest>=8.0",
    "httpx>=0.27.0",
]

[project.scripts]
aether = "aether.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["aether*"]

[tool.setuptools.package-data]
aether = ["skills/**/*", "docs/**/*"]
