[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aether"
description = "Sovereign Agentic Development System - A culturally grounded, extensible AI development orchestrator"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "Apache-2.0"}
authors = [
    {name = "Aether Project Contributors"}
]
dependencies = [
    "pyyaml>=6.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
webhook = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "tenacity>=8.2",
]

[project.scripts]
aether = "aether.cli:main"

[tool.setuptools.dynamic]
version = {attr = "aether.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["aether*"]

[tool.ruff]
line-length = 110
target-version = "py310"
