[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "aether"
description = "Sovereign Agentic Development System - A culturally grounded, extensible AI development orchestrator"
readme = "README.md"
requires-python = ">=3.10"
license = {text = "LicenseRef-Proprietary-CAT"}
authors = [
    {name = "Aether Project Contributors"}
]
dependencies = [
    "pyyaml>=6.0",
]
dynamic = ["version"]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "ruff>=0.4",
]
webhook = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "tenacity>=9.1.4",
]
computer = [
    "pyautogui>=0.9.54",
    "Pillow>=10.0",
]
all = [
    "fastapi>=0.110",
    "uvicorn>=0.27",
    "tenacity>=9.1.4",
    "pyautogui>=0.9.54",
    "Pillow>=10.0",
]

[project.scripts]
aether = "aether.cli:main"

[tool.setuptools.dynamic]
version = {attr = "aether.__version__"}

[tool.setuptools.packages.find]
where = ["."]
include = ["aether*"]

[tool.setuptools.package-data]
aether = [
    "bundled_skills/**/*",
    "bundled_skills/**/SKILL.md",
    "bundled_skills/**/references/*",
]

[tool.ruff]
line-length = 110
target-version = "py310"
